Change card registration response
